fixed background on mobile

--- a/app/css/global.css
+++ b/app/css/global.css
@@ -31,11 +31,11 @@ html {
 body {
   @apply text-md lg:text-lg;
   background-color: #7795f2;
-  background-image: url("/images/core/aethereal-background.png");
+  /* background-image: url("/images/core/aethereal-background.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
   color: #ebeff7;
   font-family: "Barlow", sans-serif;
   font-size: 2.1vh;
@@ -45,34 +45,6 @@ body {
   overflow-y: hidden;
   scroll-behavior: smooth;
 }
-
-/* 
-@media (min-width: 768px) {
-  body {
-    font-size: 1.3rem;
-  }
-}
-
-@media (min-width: 1280px) {
-  body {
-    font-size: 1.4rem;
-    line-height: 1.7rem;
-  }
-}
-
-@media (min-width: 1600px) {
-  body {
-    font-size: 1.5rem;
-    line-height: 1.8rem;
-  }
-}
-
-@media (min-width: 1920px) {
-  body {
-    font-size: 1.6rem;
-    line-height: 1.9rem;
-  }
-} */
 
 @media (min-width: 2560px) {
   body {
